clusters/pk3s/floci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: floci
  namespace: floci
  labels:
    app: floci
spec:
  type: ClusterIP
  selector:
    app: floci
  ports:
    - port: 4566
      targetPort: aws
      protocol: TCP
      name: aws
