clusters/pk3s/floci/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: floci
  namespace: floci
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`floci.local`)
      services:
        - name: floci
          port: 4566
